objects/Backflow__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ETA_Definitive__c</fullName>
        <label>ETA Definitive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETA_Tentative__c</fullName>
        <label>ETA Tentative</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Listing_Region__c</fullName>
        <formula>Vehicle_ID__r.Listing_Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Listing Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Payer</label>
        <picklist>
            <picklistValues>
                <fullName>Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty - Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty - Aftermarket</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pickup_Address__c</fullName>
        <label>Pickup Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IF(
Vehicle_ID__r.Seller_Stage__c = &quot;Sold&quot;, 1,
 IF (Vehicle_ID__r.Seller_Stage__c = &quot;Handover&quot;, 2,
 IF(AND (Vehicle_ID__r.Seller_Stage__c = &quot;Sell Car&quot;, Vehicle_ID__r.On_Deposit__c = True), 3, 
 IF(AND (Vehicle_ID__r.Seller_Stage__c = &quot;Sell Car&quot;, Vehicle_ID__r.On_Deposit__c = False), 4, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Buyer Request - Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Request - Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimates and Approvals Decided Against Fixing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Vehicle Operation By Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Vehicle Operation By Car Enthusiast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed By Estimates And Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed By Repair Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed During Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Actual Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicle Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Return</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seller_Opportunity_Name__c</fullName>
        <formula>Vehicle_ID__r.Seller_Opportunity_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Problem Found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Symptom_Description__c</fullName>
        <label>Symptom Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_In__c</fullName>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Out__c</fullName>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle_Exterior_Color__c</fullName>
        <formula>Vehicle_ID__r.Exterior_Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Exterior Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Backflows</relationshipLabel>
        <relationshipName>Backflows</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_License_Plate__c</fullName>
        <formula>Vehicle_ID__r.License_Plate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle License Plate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Mileage__c</fullName>
        <formula>Vehicle_ID__r.Mileage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_VIN__c</fullName>
        <formula>Vehicle_ID__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle VIN</label>
        <type>Text</type>
    </fields>
    <label>Backflow</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Backflow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>